# ark-vrf

./: CHANGELOG.md  Cargo.toml  README.md  bench-baseline.md  security-audit.md  thin-vrf-spec.md
.github/workflows/: rust.yml
benches/: SUMMARY.md  SUMMARY2.md  bench_utils.rs  common.rs  ietf.rs  ietf_bc.rs  justfile  pedersen.rs  ring.rs  ring_benchmarks.rs  straus.rs  thin.rs  tiny.rs  vrf_benchmarks.rs
data/: bandersnatch_ed_sha512_ell2_ietf_vectors.json  bandersnatch_ed_sha512_ell2_pedersen_vectors.json  bandersnatch_ed_sha512_ell2_ring_vectors.json  bandersnatch_sha512_ell2_vectors.json  bandersnatch_sw_sha512_tai_ietf_vectors.json  bandersnatch_sw_sha512_tai_pedersen_vectors.json  bandersnatch_sw_sha512_tai_ring_vectors.json  bandersnatch_vectors.json  ed25519_sha512_tai_ietf_vectors.json  ed25519_sha512_tai_pedersen_vectors.json  secp256_sha256_tai_ietf_vectors.json  secp256r1_sha256_tai_pedersen_vectors.json  vectors-generate.sh
data/vectors/: ark-ec-vrfs-testing_ietf.json  ark-ec-vrfs-testing_pedersen.json  baby-jubjub_sha-512_tai_ietf.json  baby-jubjub_sha-512_tai_ietf_bc.json  baby-jubjub_sha-512_tai_pedersen.json  baby-jubjub_sha-512_tai_ring.json  baby-jubjub_sha-512_tai_thin.json  baby-jubjub_sha-512_tai_tiny.json  babyjubjub_sha-512_tai_ietf.json  babyjubjub_sha-512_tai_pedersen.json  babyjubjub_sha-512_tai_ring.json  bandersnatch_blake3_ell2_ietf.json  bandersnatch_blake3_ell2_pedersen.json  bandersnatch_blake3_ell2_ring.json  bandersnatch_blake3_ell2_thin.json  bandersnatch_blake3_ell2_tiny.json  bandersnatch_ed_sha512_ell2_ietf_vectors.json  bandersnatch_ed_sha512_ell2_pedersen_vectors.json  bandersnatch_ed_sha512_ell2_ring.json  bandersnatch_ed_sha512_ell2_ring_vectors.json  bandersnatch_sha-512_ell2_ietf.json  bandersnatch_sha-512_ell2_ietf_bc.json  bandersnatch_sha-512_ell2_pedersen.json  bandersnatch_sha-512_ell2_ring.json  bandersnatch_sha-512_ell2_thin.json  bandersnatch_sha-512_ell2_tiny.json  bandersnatch_shake128_ell2_ietf.json  bandersnatch_shake128_ell2_pedersen.json  bandersnatch_shake128_ell2_ring.json  bandersnatch_shake128_ell2_thin.json  bandersnatch_shake128_ell2_tiny.json  bandersnatch_sw_sha-512_tai_ietf.json  bandersnatch_sw_sha-512_tai_ietf_bc.json  bandersnatch_sw_sha-512_tai_pedersen.json  bandersnatch_sw_sha-512_tai_ring.json  bandersnatch_sw_sha-512_tai_thin.json  bandersnatch_sw_sha-512_tai_tiny.json  bandersnatch_sw_sha512_tai_ietf_vectors.json  bandersnatch_sw_sha512_tai_pedersen_vectors.json  bandersnatch_sw_sha512_tai_ring.json  (+28 more)
src/: codec.rs  ietf.rs  ietf_bc.rs  lib.rs  pedersen.rs  ring.rs  ring2.rs  testing.rs  thin.rs  tiny.rs  utils.rs
src/arkworks/: elligator2.rs  te_sw_map.rs
src/suites/: baby_jubjub.rs  bandersnatch.rs  bandersnatch_blake3.rs  bandersnatch_shake128.rs  bandersnatch_sw.rs  ed25519.rs  jubjub.rs  mod.rs  secp256.rs  secp256r1.rs  testing.rs
src/utils/: chunks.rs  common.rs  hash_to_curve.rs  mod.rs  straus.rs  te_sw_map.rs  transcript.rs
tests/: backward_compat.rs
