[package]
name = "ark-vrf"
version = "0.4.0"
edition = "2024"
authors = [ "Davide Galassi <davxy@datawok.net>" ]
license = "MIT"
description = "Elliptic curve VRF with additional data"
repository = "https://github.com/davxy/ark-vrf"
keywords = [ "cryptography", "vrf", "ec-vrf", "ring-vrf", "zk" ]
categories = ["cryptography", "no-std"]
autobenches = false

[dependencies]
ark-ec = { version = "0.5", default-features = false }
ark-ff = { version = "0.5", default-features = false }
ark-std = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5", default-features = false }
zeroize = { version = "1.8", default-features = false }
digest = { version = "0.10", default-features = false }
generic-array = { version = "0.14", default-features = false }
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false, optional = true }
rayon = { version = "1.10", default-features = false, optional = true }
w3f-ring-proof = { version = "0.0.7", default-features = false, optional = true, path = "/mnt/ssd/develop/w3f/ring-proof/w3f-ring-proof" }
# Curves
ark-secp256r1 = { version = "0.5", default-features = false, optional = true }
ark-ed25519 = { version = "0.5", default-features = false, optional = true }
ark-ed-on-bls12-381 = { version = "0.5", default-features = false, optional = true }
ark-ed-on-bls12-381-bandersnatch = { version = "0.5", default-features = false, optional = true }
ark-bls12-381 = { version = "0.5", default-features = false, optional = true }
ark-ed-on-bn254 = { version = "0.5", default-features = false, optional = true }
ark-bn254 = { version = "0.5", default-features = false, optional = true }

[dev-dependencies]
ark-std = { version = "0.5", default-features = false, features = ["getrandom"] }
ark-ed25519 = { version = "0.5" }
hex = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
indexmap = { version = "2.2.6", features = ["serde"] }
rayon = { version = "1.10" }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "common"
harness = false

[[bench]]
name = "tiny"
harness = false

[[bench]]
name = "thin"
harness = false

[[bench]]
name = "pedersen"
harness = false

[[bench]]
name = "ring"
harness = false
required-features = ["ring"]

[[bench]]
name = "straus"
harness = false

[features]
default = [ "std" ]
std = [
  "ark-std/std",
  "ark-ec/std",
  "w3f-ring-proof?/std",
]
secret-split = [ "ark-std/getrandom" ]
full = [
  "secp256r1",
  "ed25519",
  "bandersnatch",
  "jubjub",
  "baby-jubjub",
  "ring",
]
# Curves
ed25519 = [ "ark-ed25519" ]
jubjub = [ "ark-ed-on-bls12-381", "ark-bls12-381/curve" ]
bandersnatch = [ "ark-ed-on-bls12-381-bandersnatch", "ark-bls12-381/curve" ]
baby-jubjub = [ "ark-ed-on-bn254", "ark-bn254/curve" ]
secp256r1 = [ "ark-secp256r1" ]
# Miscellanea
ring = [ "w3f-ring-proof" ]
shake128 = [ "sha3" ]
print-trace = [ "ark-std/print-trace" ]
# Optimizations
parallel = [
  "ark-ec/parallel",
  "ark-ff/parallel",
  "ark-std/parallel",
  "w3f-ring-proof?/parallel",
  "rayon",
]
asm = [
  "ark-ff/asm",
  "w3f-ring-proof?/asm",
  "sha2/asm",
  "sha3?/asm"
]
# Deterministic, no-zk, ring-proof (unsafe)
test-vectors = [ "w3f-ring-proof?/test-vectors" ]

[package.metadata.docs.rs]
features = [ "full" ]
